err/aloe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aloe'...
Listing './lib/python3.5/site-packages/aloe/steps'...
Listing './lib/python3.5/site-packages/aloe-0.1.15.egg-info'...
Listing './lib/python3.5/site-packages/aloe_sphinx'...
Listing './lib/python3.5/site-packages/ansicolors-1.1.8.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/colors'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/gherkin'...
Compiling './lib/python3.5/site-packages/gherkin/count_symbols_py2.py'...
***   File "./lib/python3.5/site-packages/gherkin/count_symbols_py2.py", line 3
    REGEX_ASTRAL_SYMBOLS = re.compile(ur'[\uD800-\uDBFF][\uDC00-\uDFFF]', re.UNICODE)
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gherkin/pickles'...
Listing './lib/python3.5/site-packages/gherkin/stream'...
Listing './lib/python3.5/site-packages/gherkin_official-4.1.3.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/bad_steps_app'...
Listing './lib/python3.5/site-packages/tests/bad_steps_app/features'...
Listing './lib/python3.5/site-packages/tests/bad_steps_app/features/steps'...
Listing './lib/python3.5/site-packages/tests/bad_steps_app_2'...
Listing './lib/python3.5/site-packages/tests/bad_steps_app_2/features'...
Listing './lib/python3.5/site-packages/tests/callbacks_app'...
Listing './lib/python3.5/site-packages/tests/callbacks_app/features'...
Listing './lib/python3.5/site-packages/tests/factoryboy_app'...
Listing './lib/python3.5/site-packages/tests/factoryboy_app/features'...
Listing './lib/python3.5/site-packages/tests/functional'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/simple_app'...
Listing './lib/python3.5/site-packages/tests/simple_app/features'...
Listing './lib/python3.5/site-packages/tests/simple_app/features/non_ascii_files'...
Listing './lib/python3.5/site-packages/tests/simple_app/features/with_tags'...
Listing './lib/python3.5/site-packages/tests/simple_app/tests'...
Listing './lib/python3.5/site-packages/tests/step_definition_app'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/features'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/features/steps'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/features/subdirectory'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/not_a_submodule'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/not_a_submodule/features'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/not_features'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/python_inside'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/python_inside/package'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/python_inside/package/features'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/submodule'...
Listing './lib/python3.5/site-packages/tests/step_definition_app/submodule/features'...
Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/tests/unit/features'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
